[tool.poetry]
name = "fastclient"
version = "0.0.1"
description = ""
authors = ["Sylwester Kardziejonek <s7r@k10k.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
httpx = "^0.27.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
ruff-lsp = "^0.0.54"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

